fixed layout issues on mobile

--- a/src/app/recipes/recipes/recipes-grid/recipes-grid.component.css
+++ b/src/app/recipes/recipes/recipes-grid/recipes-grid.component.css
@@ -1,8 +1,3 @@
-:host {
-  height: 100%;
-  display: flex;
-}
-
 .spinner-wrapper {
   display: grid;
   place-items: center;
